# airflow-etl-pipeline

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml  setup.sh
dags/: dag_marketing_api.py  dag_orders.py  dag_products.py  dag_transformation.py  dag_users.py  ingest_dag.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: custom_schema.sql
dbt_project/models/analytics/: fct_daily_order_statistics.sql  fct_order_items.sql  fct_orders.sql  schema.yml
dbt_project/models/dimensions/: snapshots.yml
dbt_project/models/facts/: fct_daily_order_statistics.sql  schema.yml
dbt_project/models/raw/: marketing.sql  order_items.sql  orders.sql  products.sql  schema.yml  users.sql
dbt_project/models/raw_current/: order_items.sql  orders.sql  products.sql  schema.yml  users.sql
dbt_project/models/raw_ingest/: sources.yml
dbt_project/models/staging/: sources.yml
dbt_project/snapshots/: dim_snapshots.yml
scripts/: extract.py  load.py  run_extract_locally.py  run_load_locally.py  run_seeding.sh  run_validate_locally.py  seed_source_db.py  validate.py
scripts/common/: data_quality.py  db_utils.py  file_utils.py
scripts/core/: data_quality_validator.py  extractor.py  loader.py
scripts/extractors/: api_extractor.py  db_extractor.py  extractor.py
scripts/loaders/: staging_loader.py
scripts/utils/: database.py  file.py
tests/: test_data_quality.py  test_data_quality_validator.py  test_extract.py  test_loader.py  test_staging_loader.py
